[package]
name = "guivre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
dirs = "5.0.1"
clipboard = "0.5.0"
rustyline = { version = "12.0.0", feature = "with-file-history" }
