[package]
name = "pwnrail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
rustyline = { version = "12.0.0", feature = "with-file-history" }
home = "0.5.5"
serde_json = "1.0.108"
toml = "0.8.8"
serde = { version = "1.0.192", features = ["derive"] }
clap = { version = "4.4.8", features = ["derive"] }
